--- a/symfony/app/config/config.yml
+++ b/symfony/app/config/config.yml
@@ -4,6 +4,7 @@ imports:
     - { resource: services.yml }
     - { resource: "@MyFrontendBundle/Resources/config/services.yml" }
     - { resource: "@MyFrontend2Bundle/Resources/config/services.yml" }
+    - { resource: "@MyFrontend3Bundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
@@ -58,6 +59,14 @@ doctrine:
         auto_generate_proxy_classes: "%kernel.debug%"
         naming_strategy: doctrine.orm.naming_strategy.underscore
         auto_mapping: true
+        #add
+        mappings:
+            translatable:
+                type: annotation
+                alias: Gedmo
+                prefix: Gedmo\Translatable\Entity
+                # make sure vendor library location is correct
+                dir: "%kernel.root_dir%/../vendor/gedmo/doctrine-extensions/lib/Gedmo/Translatable/Entity"
 
 # Swiftmailer Configuration
 swiftmailer:
@@ -66,3 +75,9 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+
+stof_doctrine_extensions:
+    orm:
+        default:
+            sluggable: true
