--- a/symfony/app/config/routing.yml
+++ b/symfony/app/config/routing.yml
@@ -1,3 +1,8 @@
+my_frontend3:
+    resource: "@MyFrontend3Bundle/Controller/"
+    type:     annotation
+    prefix:   /
+
 my_frontend2:
     resource: "@MyFrontend2Bundle/Controller/"
     type:     annotation
