--- a/symfony/app/config/config.yml
+++ b/symfony/app/config/config.yml
@@ -5,6 +5,7 @@ imports:
     - { resource: "@MyFrontendBundle/Resources/config/services.yml" }
     - { resource: "@MyFrontend2Bundle/Resources/config/services.yml" }
     - { resource: "@MyFrontend3Bundle/Resources/config/services.yml" }
+    - { resource: "@MyFrontend4Bundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
