--- a/symfony/app/config/config.yml
+++ b/symfony/app/config/config.yml
@@ -7,6 +7,8 @@ imports:
     - { resource: "@MyFrontend3Bundle/Resources/config/services.yml" }
     - { resource: "@MyFrontend4Bundle/Resources/config/services.yml" }
     - { resource: "@MyFrontend5Bundle/Resources/config/services.yml" }
+    - { resource: "@MyFrontend6Bundle/Resources/config/services.yml" }
+    - { resource: "@MyFrontend7Bundle/Resources/config/services.yml" }
 
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
