--- a/symfonyCRUD/app/config/config.yml
+++ b/symfonyCRUD/app/config/config.yml
@@ -3,6 +3,7 @@ imports:
     - { resource: security.yml }
     - { resource: services.yml }
     - { resource: "@MyFrontendBundle/Resources/config/services.yml" }
+    - { resource: "@MyUserBundle/Resources/config/services.yml" }
 
 
 # Put parameters here that don't need to change on each machine where the app is deployed
@@ -12,6 +13,7 @@ parameters:
 
 framework:
     form: true
+    translator: ~
     #esi:             ~
     #translator:      { fallbacks: ["%locale%"] }
     secret:          "%secret%"
@@ -80,3 +82,8 @@ stof_doctrine_extensions:
     orm:
         default:
             sluggable: true
+
+fos_user:
+    db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
+    firewall_name: main
+    user_class: My\UserBundle\Entity\User
