--- a/symfonyCRUD/composer.json
+++ b/symfonyCRUD/composer.json
@@ -23,7 +23,8 @@
         "incenteev/composer-parameter-handler": "~2.0",
         "doctrine/doctrine-fixtures-bundle": "^2.3",
         "stof/doctrine-extensions-bundle": "^1.2",
-        "gedmo/doctrine-extensions":      "dev-master"
+        "gedmo/doctrine-extensions":      "^2.4",
+        "friendsofsymfony/user-bundle": "~2.0@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~3.0",
