--- a/symfonyCRUD/app/config/routing.yml
+++ b/symfonyCRUD/app/config/routing.yml
@@ -1,7 +1,7 @@
 my_user:
     resource: "@MyUserBundle/Controller/"
     type:     annotation
-    prefix:   /
+    prefix:   /user
 
 my_frontend:
     resource: "@MyFrontendBundle/Controller/"
