--- a/symfonyCRUDtest/app/config/config.yml
+++ b/symfonyCRUDtest/app/config/config.yml
@@ -5,6 +5,7 @@ imports:
     - { resource: "@MyFrontendBundle/Resources/config/services.yml" }
     - { resource: "@MyUserBundle/Resources/config/services.yml" }
     - { resource: "@MyTestBundle/Resources/config/services.yml" }
+    - { resource: "@MyTestPDFBundle/Resources/config/services.yml" }
 
 
 # Put parameters here that don't need to change on each machine where the app is deployed
