--- a/.htaccess
+++ b/.htaccess
@@ -1,15 +1,22 @@
-<VirtualHost *:80>
-    DocumentRoot /Local/admingenerator/web
-    DirectoryIndex index.php
-    <Directory "/Local/admingenerator/web">
-        Options Indexes FollowSymLinks
-        Order Allow,Deny
-        Allow from all
-        AllowOverride all
-        <IfModule mod_php5.c>
-            php_admin_flag engine on
-            php_admin_flag safe_mode off
-            php_admin_value open_basedir none
-        </IfModule>
-    </Directory>
-</VirtualHost>
+#<VirtualHost *:80>
+#    DocumentRoot /Local/admingenerator/web
+#    DirectoryIndex index.php
+#    <Directory "/Local/admingenerator/web">
+#        Options Indexes FollowSymLinks
+#        Order Allow,Deny
+#        Allow from all
+#        AllowOverride all
+#        <IfModule mod_php5.c>
+#            php_admin_flag engine on
+#            php_admin_flag safe_mode off
+#            php_admin_value open_basedir none
+#        </IfModule>
+#    </Directory>
+#</VirtualHost>
+
+<Directory /var/www/html/symfonyuse/web/>
+    Options Indexes FollowSymLinks MultiViews
+    AllowOverride None
+    Order allow,deny
+    allow from all
+</Directory>
