--- a/symfonyCRUDpanel/app/config/routing.yml
+++ b/symfonyCRUDpanel/app/config/routing.yml
@@ -1,3 +1,11 @@
+my_frontend_contact:
+    resource: "@MyFrontendBundle/Controller/ContactController.php"
+    type:     annotation
+
+my_frontend_story:
+    resource: "@MyFrontendBundle/Controller/StoryController.php"
+    type:     annotation
+
 my_frontend_carousel:
     resource: "@MyFrontendBundle/Controller/CarouselController.php"
     type:     annotation
